2008-03-14  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::Patch management commands):
	Document new command [patch-list].

	* bin/cygbuild.sh (CygbuildPerlLibraryList): Remove var SORT.
	(CygbuildObjDumpLibraryDepList): Remove var SORT.
	(CygbuildCygcheckLibraryDepListFull): Remove var SORT.
	(CygbuildCygcheckLibraryDepMain): Show also objdump results.
	(CygbuildDefineGlobalCommands): Define GPGOPT.
	(CygbuildGPGsignFiles): Use GPGOPT.
	(CygbuildGPGverify): Use GPGOPT.
	(CygbuildDllToLibName): new.
	(CygbuildCygcheckLibraryDepMain): Use objdump result and
	`CygbuildDllToLibName'.
	(CygbuildPatchFileList): Was CygbuildPatchList.
	(CygbuildFindLowlevel): New.
	(CygbuildPatchFileList): Use CygbuildFindLowlevel
	(CygbuildCommandMainCheckSpecial): New command [patch-list].
	(CygbuildCygcheckLibraryDepMain): Adjust objdump handling.

2008-03-13  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	-- Move all checking functions to separate library:
	   etc/lib/libcheck.sh. Commit: 1eb59c7
	(CygbuildBootVariablesGlobalMain): Move
	CYGBUILD_SETUP_HINT_CATEGORY to libcheck.sh
	(CygbuildCmdInstallCheckMain): Use libcheck.sh
	(CygbuildInstallPackageDocs): Adjust docdirguess.
	(CygbuildPatchList): Use `CygbuildFindDo'.

	* etc/lib/libcheck.sh: New file.
	(CygbuildCygcheckLibraryDepSourceMake): Fix regexp

	* Makefile
	(FROM_ETC_LIB): New
	(OBJS_ETC_LIB): New.
	(install-lib-symlinks): New.
	(install-share-lib): New.
	(install-share): Add install-share-lib.
	(install-in-place): Add install-lib-symlinks.

	[ commit: fb2dca2]

	* bin/cygbuild.sh: (CygbuildCygcheckLibraryDepSource): Add
	xmlto, asciidoc check. Add *.mk search.
	(CygbuildCmdInstallCheckBinFiles): Add /usr/games.
	(CygbuildInstallFixFileExtensions): Add /usr/games. Ignore
	find error (no directories to search).
	(CygbuildCmdInstallCheckDirStructure): Add /usr/games.
	(CygbuildInstallExtraManualCompress): Support space in
	file names.